--- a/src/components/for-you/for-you.css
+++ b/src/components/for-you/for-you.css
@@ -2,12 +2,27 @@
 	max-width: 100vw;
 	width: auto;
 	min-height: 100vh;
-	height: fit-content;
+	height: 100%;
 	font-family: "Solid Mono";
 	padding: 32px;
 	display: flex;
+	gap: 10px;
+	justify-content: space-between;
+	position: relative;
+}
+
+.for-you-left {
+	display: flex;
 	gap: 35px;
 	flex-direction: column;
+	overflow-y: scroll;
+	height: 549px;
+	max-height: 100%;
+	width: 1300px;
+}
+
+.for-you-left::-webkit-scrollbar {
+	display: none;
 }
 
 .box-container {
@@ -32,4 +47,43 @@
 .for-you-navigation a:active {
 	border: 1px solid #fff;
 	border-radius: 25px;
+}
+
+.trending-ai-model {
+	width: 343px;
+	height: 549px;
+	max-height: 100%;
+	background-color: #00163280;
+	border-radius: 21px;
+	padding: 16px;
+	display: flex;
+	justify-content: center;
+	flex-direction: column;
+	gap: 15px;
+	color: white;
+}
+
+.trending-title {
+	border-bottom: 1px solid #041e4a;
+	text-align: center;
+	padding-bottom: 10px;
+}
+
+.trending-ai-model p {
+	font-size: 18px;
+}
+
+.trending-card {
+	background-color: #041123;
+	width: 275px;
+	height: 75px;
+	border-radius: 15px;
+	padding: 16px;
+}
+
+.trending-card-footer {
+	font-size: 13px;
+	color: #d6d6d6;
+	display: flex;
+	justify-content: space-between;
 }
